# px4-mpc

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
config/: astrobee_tuning.yaml  quadrotor_tuning.yaml
launch/: mpc_quadrotor.launch.py
mpc_msgs/: CMakeLists.txt  package.xml
mpc_msgs/srv/: SetPose.srv
px4_mpc/: astrobee_demo.py  mpc_quadrotor.py  package.xml  quadcopter_demo.py  setup.cfg  setup.py  test_multirotor_rate_ocp.py
px4_mpc/controllers/: multirotor_rate_mpc.py  setpoint_mpc.py  tracking_mpc.py
px4_mpc/models/: astrobee.py  multirotor_rate_model.py  quadrotor.py
px4_mpc/px4_mpc/: mpc_quadrotor.py  mpc_spacecraft.py  rviz_pos_marker.py  test_multirotor_rate_closedloop.py  visualization.py
px4_mpc/px4_mpc/config/: config.rviz  trajectory_quat.txt
px4_mpc/px4_mpc/controllers/: multirotor_rate_mpc.py  spacecraft_direct_allocation_mpc.py  spacecraft_direct_allocation_traj_mpc.py  spacecraft_rate_mpc.py  spacecraft_wrench_mpc.py
px4_mpc/px4_mpc/launch/: mpc_quadrotor_launch.py  mpc_spacecraft_launch.py
px4_mpc/px4_mpc/models/: multirotor_rate_model.py  spacecraft_direct_allocation_model.py  spacecraft_rate_model.py  spacecraft_wrench_model.py
px4_mpc/px4_mpc/simulation/: basic_environment.py
px4_mpc/px4_mpc/test/: test_setpoints.py
px4_mpc/resource/: visualize.rviz
src/: main.cpp
src/px4_mpc/: util.py
src/px4_mpc/controllers/: setpoint_mpc.py
src/px4_mpc/models/: quadrotor.py
