[tool.poetry]
name = "px4_mpc"
version = "0.1.0"
description = "A PX4 sample interface for MPC controllers."
authors = ["Jaeyoung Lim <jaeyoung.lim@ethz-asl.ch>, Pedro Roque <padr@kth.se>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
casadi = "3.5.5"
pyyaml = "^5.3.1"
numpy = "^1.19.2,<1.23"
matplotlib = "^3.3.2"

[tool.poetry.scripts]
astrobee_demo = 'nodes.astrobee_demo:main'
quadcopter_demo = 'nodes.quadcopter_demo:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
